Fix 404 #error visibility

--- a/404.css
+++ b/404.css
@@ -10,7 +10,7 @@ body {
   margin: 0;
 }
 
-div {
+#error {
   visibility: hidden;
 }
 
@@ -22,7 +22,8 @@ h1 {
 a {
   display: block;
   text-decoration: none;
-  padding: 5px 10px;
+  box-sizing: border-box;
+  padding: 20px;
   text-align: center;
   font-size: 20px;
   width: 100%;
